added recipe and shopping list service sections

--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -8,6 +8,7 @@
                 class="form-control" 
                 id="name"
                 #nameInput>
+                <!-- loacl ref #nameInput -->
             </div>
             <div class="col-sm-2 form-group">
                 <label for="amount">Amount</label>
