--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,24 +1,27 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="" alt="" class="img-responsive">
+        <img 
+        style="max-height: 250px;" [src]="recipe.imagePath" alt={{recipe.name}} class="img-responsive">
     </div>
 </div>
 
 <div class="row">
     <div class="col-xs-12">
-        <h1>Recipe Name: </h1>
+        <h1>Recipe Name: {{recipe.name}}</h1>
     </div>
 </div>
 
 <div class="row">
     <div class="col-xs-12">
-        <div class="btn-group">
+        <div 
+            class="btn-group"
+            appDropdown>
             <button 
             type="button"
             class="btn btn-primary dropdown-toggle"
             >Manage Recipe <span class="caret"></span></button>
             <ul class="dropdown-menu">
-                <li><a href="#">To Shopping List</a></li>
+                <li><a href="#" (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
                 <li><a href="#">Edit Recipe</a></li>
                 <li><a href="#">Delete Recipe</a></li>
             </ul>
@@ -28,11 +31,16 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <p>Description</p>
+        <p>Description: {{recipe.description}}</p>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <p>Ingredients</p>
+        <ul class="list-group">
+            <li class="list-group-item"
+            *ngFor ="let ingredient of recipe.ingredients">
+        {{ingredient.name}} - {{ingredient.amount}}
+    </li>
+        </ul>
     </div>
 </div>
