--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,7 +1,10 @@
 <a 
-    href="#" 
-    class="list-group-item clearfix"
-    (click) ="onSelected()">
+    [routerLink] = "[index]"
+    routerLinkActive = "active"
+    style="cursor: pointer;"
+    class="list-group-item clearfix">
+    <!-- (click) ="onSelected()" that was in side <a> -->
+
         <div class="pull-left">
             <h4 class="list-group-item-heading">Recipe Name: {{recipe.name}}</h4>
             <p class="list-group-item-text">Description: {{recipe.description}}</p>
@@ -13,8 +16,8 @@
             <!-- Property binding -->
             <!-- [src] = "recipe.imagePath" -->
             <img 
-            [src] = "recipe.imagePath"
-            alt="{{recipe.name}}" class="img-responsive" 
-            style="max-height: 50px">
+                [src] = "recipe.imagePath"
+                alt="{{recipe.name}}" class="img-responsive" 
+                style="max-height: 50px">
         </span>
 </a>
