--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -20,12 +20,13 @@
         (recipeWasSelected) = "selectedRecipe = $event"></app-recipe-list> -->
     </div>
     <div class="col-md-7">
-      <app-recipe-detail
+      <!-- <app-recipe-detail
         *ngIf="selectedRecipe; else infoText"
         [recipe] ="selectedRecipe"></app-recipe-detail>
       <ng-template #infoText>
         <h3>Please select a Recipe! </h3>
-      </ng-template>
+      </ng-template> -->
+      <router-outlet></router-outlet>
     </div>
   </div>
   
