--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,29 +1,47 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form (ngSubmit) = "onSubmit(f)" #f="ngForm">
             <div class="col-sm-5 form-group">
                 <label for="name">Name</label>
                 <input 
                 type="text" 
                 class="form-control" 
                 id="name"
-                #nameInput>
+                name="name"
+                ngModel
+                required>
                 <!-- loacl ref #nameInput -->
             </div>
+            <!-- #nameInput -->
             <div class="col-sm-2 form-group">
                 <label for="amount">Amount</label>
                 <input 
                 type="number" 
                 class="form-control" 
                 id="number"
-                #amountInput>
+                name="amount"
+                ngModel
+                required
+                [pattern] ="'^[1-9]+[0-9]*$'"
+                >
             </div>
+            <!-- #amountInput -->
+            
+            <!--Validator: pattern ="^[1-9]+[0-9]*$" and [pattern] ="'^[1-9]+[0-9]*$'" both way can we bind-->
 
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" type="submit" (click)="onAddItem()">Add</button>
-                    <button class="btn btn-danger" type="button">Delete</button>
-                    <button class="btn btn-primary" type="button">Clear</button>
+                    <button 
+                        class="btn btn-success" 
+                        type="submit"
+                        [disabled] = !f.valid>{{editMode ? 'Update' : 'Add'}}</button>
+                    <button 
+                        class="btn btn-danger" 
+                        type="button" 
+                        (click) ="onDelete()" 
+                        *ngIf ="editMode"
+                        >Delete</button>
+                    <button class="btn btn-primary" type="button" (click) = "onClear()">Clear</button>
                 </div>
             </div>
         </form>
