--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,113 @@
-<p>recipe-edit works Perfectly!</p>
+<div class="row" >
+    <div class="col-xs-12">
+        <form [formGroup]="recipeForm" (ngSubmit) = "onSubmit()">
+            <div class="row">
+                <div class="col-xs-12">
+                    <button 
+                        style="margin-right: 5px" 
+                        type="submit" 
+                        class="btn btn-primary"
+                        [disabled] = '!recipeForm.valid'
+                        >Save</button>
+                    <button type="button" class="btn btn-danger" (click) ="onCancel()">Cancel</button>
+                </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input 
+                            type="text" 
+                            id="name" 
+                            formControlName="name"
+                            placeholder="Name" 
+                            class="form-control">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="imagePath">Image URL</label>
+                        <input 
+                            type="text" 
+                            id="imagePath" 
+                            formControlName="imagePath"
+                            placeholder="image" 
+                            class="form-control"
+                            #imagePath>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-2">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                       <img [src]="imagePath.value" alt="" class="img-responsive">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="description">Description</label>
+                        <textarea 
+                            type="text" 
+                            id="description" 
+                            formControlName="description"
+                            placeholder="Description here" 
+                            class="form-control"
+                            rows="6"></textarea>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-xs-12" formArrayName = "ingredients">
+                    <div 
+                        class="row"
+                      
+                        >
+                    <!-- <div 
+                        class="row"
+                        *ngFor="let ingredientCtrl of controls; let i = index"
+                        [formGroupName] ="i"
+                        > -->
+                        <div class="col-sm-8">
+                            <input
+                            placeholder="name" 
+                            type="text"  
+                            class="form-control"
+                            formControlName="name">
+                        </div>
+                        <div class="col-sm-2">
+                            <input 
+                                placeholder="amount"
+                                type="number"
+                                class="form-control"
+                                formControlName="amount">
+                        </div>
+                        <div class="col-xs-2">
+                            <button 
+                                type="button"
+                                class="btn btn-danger">X</button>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <button 
+                                type="button"
+                                class="btn btn-success" 
+                                (click)= "onAddIngredients()">Add Ingredients</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </form>
+    </div>
+</div>
